[metadata]
name = unconcealed
version = 0.3
author = Peter Oxley
author_email = oxpeter@gmail.com
description = A python package to assist visualization of image manipulation signatures
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/oxpeter/unconcealed
project_urls =
    Bug Tracker = https://github.com/oxpeter/unconcealed/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6

[options.packages.find]
where = unconcealed