[metadata]
name = unconcealed
version = 0.3.1
author = Peter Oxley
author_email = oxpeter@gmail.com
description = A python package to assist visualization of image manipulation signatures
long_description = file: README
long_description_content_type = text/markdown
url = https://github.com/oxpeter/unconcealed
license = mit
project_urls =
    Bug Tracker = https://github.com/oxpeter/unconcealed/issues
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering
keywords =
    forensic
    analysis
    research
    western blot
    northern blot
    immunoblot
    research reproducibility
    pubpeer

[options]
packages = find:
python_requires = >=3.6
install_requires =
    ipywidgets>=7.6
    matplotlib>=3.4
    numpy>=1.20
    opencv-python>4
    pandas>=1.2
    Pillow>=8.1
    scipy>=1.6
    seaborn>=0.11

